Add Norwegian translation

--- a/lang/no.html
+++ b/lang/no.html
@@ -18,60 +18,59 @@
     </nav>
     <div class="container">
         <br>
-        <h2>Калькулятор Калорий</h2>
+        <h2>Kalorikalkulator</h2>
         <br>
         <table>
             <tbody>
                 <tr>
-                    <td style="padding-right: 25px;">Масса (кг)</td>
-                    <td><input type="number" title="mass" class="form-control" placeholder="Масса" id="mass-inp" value="60" /></td>
+                    <td style="padding-right: 25px;">Også (kg)</td>
+                    <td><input type="number" title="mass" class="form-control" placeholder="Også" id="mass-inp" value="60" /></td>
                 </tr>
                 <tr>
-                    <td style="padding-right: 25px;">Высота (см)</td>
-                    <td><input type="number" title="height" class="form-control" placeholder="Высота" id="height-inp" value="180" /></td>
+                    <td style="padding-right: 25px;">Høyde (cm)</td>
+                    <td><input type="number" title="height" class="form-control" placeholder="Høyde" id="height-inp" value="180" /></td>
                 </tr>
                 <tr>
-                    <td style="padding-right: 25px;">Спорт / неделя</td>
+                    <td style="padding-right: 25px;">Sport / uke</td>
                     <td>
                         <select class="form-select" aria-label="Sport Select" id="sport-select">
-                            <option value="1.2">Нет спорта</option>
-                            <option value="1.375" selected>от 1 до 3 дней</option>
-                            <option value="1.55">от 3 до 5 дней</option>
-                            <option value="1.725">от 6 до 7 дней</option>
-                            <option value="1.9">2 часа в день</option>
+                            <option value="1.2">Ingen sport</option>
+                            <option value="1.375" selected>1 til 3 dager</option>
+                            <option value="1.55">3 til 5 dager</option>
+                            <option value="1.725">6 til 7 dager</option>
+                            <option value="1.9">2 timer om dagen</option>
                         </select>
                     </td>
                 </tr>
             </tbody>
-        </table>
+        </table> 
         <br>
         <div class="form-check">
             <input class="form-check-input" type="checkbox" id="romanian-check">
             <label class="form-check-label" for="romanian-check">
-                Румынский
+                Rumensk
                 <img style="height: 1.5rem;" src="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/160/apple/325/flag-romania_1f1f7-1f1f4.png" alt="">
             </label>
         </div>
         <div class="form-check">
             <input class="form-check-input" type="checkbox" id="russian-check">
             <label class="form-check-label" for="russian-check">
-                Русский
+                Russisk
                 <img style="height: 1.5rem;" src="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/160/apple/325/flag-russia_1f1f7-1f1fa.png" alt="">
             </label>
         </div>
         <br>
-        <button type="button" class="btn btn-primary" onclick="calculateCalories()">Ответить</button>
+        <button type="button" class="btn btn-primary" onclick="calculateCalories()">Sende inn</button>
         <br>
         <br>
         <table class="table table-dark">
             <tbody>
                 <tr>
-                    <td>Калории для объема</td>
-                    <td><span id="data"></span> кал</td>
+                    <td>Kalorier for volum</td>
+                    <td><span id="data"></span> kal</td>
                 </tr>
             </tbody>
         </table>
-        <br>
         <br>
         <a href="../index.html">English</a>
         <a href="ru.html">Русский</a>
