--- a/index.html
+++ b/index.html
@@ -72,8 +72,10 @@
             </tbody>
         </table>
         <br>
+        <a href="index.html">English</a>
         <a href="lang/ru.html">Русский</a>
         <a href="lang/ca.html">Català</a>
+        <a href="lang/no.html">Norsk</a>
     </div>
     <script src="calories.js"></script>
 </body>
