Organize language links

--- a/lang/ru.html
+++ b/lang/ru.html
@@ -72,11 +72,12 @@
             </tbody>
         </table>
         <br>
-        <br>
-        <a href="../index.html">English</a>
-        <a href="ru.html">Русский</a>
-        <a href="ca.html">Català</a>
-        <a href="no.html">Norsk</a>
+        <div class="lang-links">
+            <a href="../index.html">English</a> /
+            <a href="ru.html">Русский</a> /
+            <a href="ca.html">Català</a> /
+            <a href="no.html">Norsk</a>
+        </div>
     </div>
     <script src="../calories.js"></script>
 </body>
