--- a/index.html
+++ b/index.html
@@ -72,10 +72,12 @@
             </tbody>
         </table>
         <br>
-        <a href="index.html">English</a>
-        <a href="lang/ru.html">Русский</a>
-        <a href="lang/ca.html">Català</a>
-        <a href="lang/no.html">Norsk</a>
+        <div class="lang-links">
+            <a href="index.html">English</a> /
+            <a href="lang/ru.html">Русский</a> /
+            <a href="lang/ca.html">Català</a> /
+            <a href="lang/no.html">Norsk</a>
+        </div>
     </div>
     <script src="calories.js"></script>
 </body>
