--- a/lang/no.html
+++ b/lang/no.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="../img/VK.png" type="image/x-icon">
+    <link rel="stylesheet" href="../style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <title>Calories Calculator</title>
 </head>
@@ -23,15 +24,15 @@
         <table>
             <tbody>
                 <tr>
-                    <td style="padding-right: 25px;">Også (kg)</td>
+                    <td class="data-td">Også (kg)</td>
                     <td><input type="number" title="mass" class="form-control" placeholder="Også" id="mass-inp" value="60" /></td>
                 </tr>
                 <tr>
-                    <td style="padding-right: 25px;">Høyde (cm)</td>
+                    <td class="data-td">Høyde (cm)</td>
                     <td><input type="number" title="height" class="form-control" placeholder="Høyde" id="height-inp" value="180" /></td>
                 </tr>
                 <tr>
-                    <td style="padding-right: 25px;">Sport / uke</td>
+                    <td class="data-td">Sport / uke</td>
                     <td>
                         <select class="form-select" aria-label="Sport Select" id="sport-select">
                             <option value="1.2">Ingen sport</option>
@@ -49,14 +50,14 @@
             <input class="form-check-input" type="checkbox" id="romanian-check">
             <label class="form-check-label" for="romanian-check">
                 Rumensk
-                <img style="height: 1.5rem;" src="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/160/apple/325/flag-romania_1f1f7-1f1f4.png" alt="">
+                <img class="flag-icon" src="../img/ro.png" alt="Romania Flag">
             </label>
         </div>
         <div class="form-check">
             <input class="form-check-input" type="checkbox" id="russian-check">
             <label class="form-check-label" for="russian-check">
                 Russisk
-                <img style="height: 1.5rem;" src="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/160/apple/325/flag-russia_1f1f7-1f1fa.png" alt="">
+                <img class="flag-icon" src="../img/ru.png" alt="Russia Flag">
             </label>
         </div>
         <br>
