Add other units [kcal, KJ]

--- a/index.html
+++ b/index.html
@@ -67,8 +67,11 @@
         <table class="table table-dark">
             <tbody>
                 <tr>
-                    <td>Calories for volume</td>
-                    <td><span id="data"></span> cal</td>
+                    <td>For volume</td>
+                    <td></td>
+                    <td><span id="cal"></span> cal</td>
+                    <td><span id="kcal"></span> kcal</td>
+                    <td><span id="kj"></span> KJ</td>
                 </tr>
             </tbody>
         </table>
