--- a/lang/ru.html
+++ b/lang/ru.html
@@ -67,9 +67,16 @@
         <table class="table table-dark">
             <tbody>
                 <tr>
+                    <td>Для объема</td>
+                    <td></td>
+                    <td><span id="cal"></span> кал</td>
+                    <td><span id="kcal"></span> ккал</td>
+                    <td><span id="kj"></span> KJ</td>
+                </tr>
+                <!--tr>
                     <td>Калории для объема</td>
                     <td><span id="data"></span> кал</td>
-                </tr>
+                </tr-->
             </tbody>
         </table>
         <br>
