--- a/lang/no.html
+++ b/lang/no.html
@@ -67,9 +67,16 @@
         <table class="table table-dark">
             <tbody>
                 <tr>
+                    <td>For volum</td>
+                    <td></td>
+                    <td><span id="cal"></span> cal</td>
+                    <td><span id="kcal"></span> kcal</td>
+                    <td><span id="kj"></span> KJ</td>
+                </tr>
+                <!--tr>
                     <td>Kalorier for volum</td>
                     <td><span id="data"></span> kal</td>
-                </tr>
+                </tr-->
             </tbody>
         </table>
         <br>
